--- a/src/pages/PartnerModule/PropertyForm/PropertyEditor/ImageEditor/imageEditor.scss
+++ b/src/pages/PartnerModule/PropertyForm/PropertyEditor/ImageEditor/imageEditor.scss
@@ -1,4 +1,27 @@
 .p-image-editor-wrapper {
+  .file-uploader-box {
+    margin: 30px 0px;
+    display: flex;
+    justify-content: center;
+    .file-item-uploader {
+      .file-item {
+        cursor: pointer;
+        width: 100px;
+        height: 90px;
+        background-color: #ffffff;
+        border: 3px dashed rgba(177, 174, 174, 0.5);
+        //  @include border-radius(8%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .btn-text {
+          font-size: 40px;
+          color: #5d5a5a;
+        }
+      }
+    }
+  }
+
   .p-image-editor-inner-wrapper {
     //height: auto;
     //max-height: 1000px;
